update activities, product

--- a/project/templates/activities/activities.html
+++ b/project/templates/activities/activities.html
@@ -31,55 +31,26 @@
       </div>
     <div class="activities-container">
       <div id="activities_news">
-        <div class="content_block ">
-          <div class="content2" style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
-            <div class="block_header">
-              <div class="text1">CHECK YOUR MAIL!</div>
-            </div>
-            <span class="text2">
-              Loa…loa…loa Eco Smart Solutions
-              ĐÃ CÓ KẾT QUẢ TUYỂN THÀNH VIÊN!
-              
-              Lời đầu tiên, ESS xin gửi lời cảm ơn chân thành nhất tới những chiếc đơn xinh xắn từ các bạn.
-              ...
-            </span>
-            <div class="readmore">
-              <a
-                href="https://www.facebook.com/photo/?fbid=138988312395956&set=a.109001262061328"
-                class="text3"
-              >
-                Read More</a
-              >
-            </div>
-          </div>
-          <div class="image2">
-            <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-              src="{{ url_for('static', filename='img/activities_page/activities_page_14.jpg') }}"
-              class="img"
-              alt=""
-            />
-          </div>
-        </div>
 
         <div class="content_block ">
           <div class="image2" >
             <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
-              src="{{ url_for('static', filename='img/activities_page/activities_page_13.jpg') }}"
+              src="{{ url_for('static', filename='img/activities_page/activities_page_19.jpg') }}"
               class="img"
               alt="TẾT CỦA CÔNG DÂN TOÀN CẦU CÓ GÌ KHÁC BIỆT?"
             />
           </div>
           <div class="content2" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;">
             <div class="block_header">
-              <div class="text1">Exciting news!</div>
+              <div class="text1">THỜI TRANG BỀN VỮNG - XU HƯỚNG MỚI TOÀN CẦU</div>
             </div>
             <span class="text2">
-              We've joined the Social Business/Startup system, and we're currently recruiting talented individuals who share our passion for eco-friendly products!
-                ...
+              Ngày nay, cùng với sự phát triển của xã hội,
+               đi kèm theo là sự nảy sinh của các vấn đề về môi trường, người tiêu dùng ngày càng khắt khe hơn trong việc lựa chọn quần áo, phụ kiện. 
             </span>
             <div class="readmore">
               <a
-                href="https://www.facebook.com/photo?fbid=137899759171478&set=a.105895305705257"
+                href="https://www.facebook.com/ecosmartsolutionssjc/posts/pfbid0hiu2V2EgNWeSoqR5uDXQawN1vFt5BswrD63nXYCqgRyKMR7psQvJbNCHZ8KWezhjl"
                 class="text3"
               >
                 Read More</a
@@ -91,15 +62,16 @@
         <div class="content_block ">
           <div class="content2" style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
             <div class="block_header">
-              <div class="text1">THÔNG BÁO CÒN 1 NGÀY ĐĂNG KÝ ĐÓNG ĐƠN</div>
+              <div class="text1">RA MẮT THỜI TRANG CỦA MỴ x ECO SMART SOLUTIONS</div>
             </div>
             <span class="text2"
-              >Chỉ còn 1 ngày nữa… Eco Smart Solutions sẽ đóng đơn tuyển thành viên.
-              Vì thế hãy nhanh chóng đăng ký ngay để có cơ hội tham gia Eco Smart Solutions nhé....
+              >Today, we are excited to announce our new partnership with Mỵ Store!
+
+              Eco Smart Solutions chính thức ra mắt kênh phân phối sản phẩm chính thức của thương hiệu Mỵ Store - Thời trang của Mỵ...
             </span>
             <div class="readmore">
               <a
-                href="https://www.facebook.com/photo?fbid=137528845875236&set=a.109001262061328"
+                href="https://www.facebook.com/photo/?fbid=117135821308772&set=a.117125581309796"
                 class="text3"
               >
                 Read More</a
@@ -108,7 +80,7 @@
           </div>
           <div class="image2">
             <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-              src="{{ url_for('static', filename='img/activities_page/activities_page_12.jpg') }}"
+              src="{{ url_for('static', filename='img/activities_page/activities_page_18.jpg') }}"
               class="img"
               alt=""
             />
@@ -118,7 +90,7 @@
         <div class="content_block ">
           <div class="image2">
             <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
-              src="{{ url_for('static', filename='img/activities_page/activities_page_11.jpg') }}"
+              src="{{ url_for('static', filename='img/activities_page/activities_page_17.jpg') }}"
               class="img"
               alt=""
               class="anh"
@@ -126,16 +98,15 @@
           </div>
           <div class="content2" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;">
             <div class="block_header">
-              <div class="text1">Valentine’s Day is a holiday with one of the most significant carbon footprints</div>
+              <div class="text1">17SDGs LÀ GÌ? BẠN ĐÃ SỐNG CÓ TRÁCH NHIỆM CHƯA?</div>
             </div>
             <span class="text2"
-              >Nếu sự ngọt ngào của Ngày lễ tình nhân khiến bạn xao xuyến,
-              thì…
-              những thiệt hại mà ngày lễ này gây ra cho môi trường có thể thực sự khiến trái tim bạn tavien nát....
+              >Sustainable Development Goals (SDGs) là 17 Mục tiêu Phát triển Bền vững như một lộ trình để chấm dứt đói nghèo, 
+              chống bất bình đẳng và chống biến đổi khí hậu trong 15 năm tới,...
             </span>
             <div class="readmore">
               <a
-                href="https://www.facebook.com/photo?fbid=137191855908935&set=a.109001262061328"
+                href="https://www.facebook.com/ecosmartsolutionssjc/posts/pfbid0RFRFm7hZuJD4QQhd6ppBCzhpkiiYQRbFgFZEqaHynNGhT1JdDjeKz3LXQNxbvNSCl"
                 class="text3"
               >
                 Read More</a
@@ -147,17 +118,16 @@
         <div class="content_block ">
           <div class="content2"style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
             <div class="block_header">
-              <div class="text1">HUMAN OF ESS EP.3-2: 3 THÁNG TRÔI QUA, THÀNH VIÊN ESS CÓ CẢM NHẬN GÌ?</div>
+              <div class="text1">ZAKKA NATURALS - THƯƠNG HIỆU CHẤT LƯỢNG MANG ĐẾN NIỀM TIN CHO MỸ PHẨM NỘI ĐỊA </div>
             </div>
             <span class="text2"
-              >- Alo! Tổng đài Eco Smart Solutions xin nghe.
-              - Cho hỏi ở ESS có gì mà mọi người thích thú thế?
-              - Thế để tớ kể cậu nghe cảm nhận của những thành viên ESS sau 3 tháng gắn bó nhé!
+              >Những năm gần đây, làn sóng mỹ phẩm nội địa dần chiếm lại vị thế trong lòng người tiêu dùng Việt.
+               Trong đó không thể bỏ qua Zakka Naturals...
               
             </span>
             <div class="readmore">
               <a
-                href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02JrrQmT6i68XZtjRE7zuWxdeftFF8cfy14sz2QbvV8q8KTUTeE8q4X1SsZrRGQL5vl"
+                href="https://www.facebook.com/ecosmartsolutionssjc/posts/pfbid0pxvJkUwtsx1NiWrSYJgGsVgKYHc4KfrGwRjH8tkNcDWmyh3qwSj7Y2gwXGPteeRCl"
                 class="text3"
               >
                 Read More</a
@@ -166,7 +136,7 @@
           </div>
           <div class="image2">
             <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-              src="{{ url_for('static', filename='img/activities_page/activities_page_10.jpg') }}"
+              src="{{ url_for('static', filename='img/activities_page/activities_page_16.jpg') }}"
               class="img"
               alt=""
             />
@@ -176,19 +146,18 @@
         <div class="content_block ">
           <div class="image2">
             <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
-              src="{{ url_for('static', filename='img/activities_page/activities_page_9.jpg') }}"
+              src="{{ url_for('static', filename='img/activities_page/activities_page_15.jpg') }}"
               class="img"
               alt=""
             />
           </div>
           <div class="content2" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;">
             <div class="block_header">
-              <div class="text1">HUMAN OF ESS EP.3-2: 3 THÁNG TRÔI QUA, THÀNH VIÊN ESS CÓ CẢM NHẬN GÌ?</div>
+              <div class="text1">HỢP TÁC ECO SMART SOLUTIONS X MỴ STORE</div>
             </div>
-            <span class="text2">Thấm thoát đã 3 tháng trôi qua kể từ khi Eco Smart Solutions bắt đầu khởi động. Từ xây dựng nền móng đầu tiên, 
-              đến lúc cùng nhau làm việc và học tập, những thành viên Eco Smart Solutions luôn trau dồi và phát triển bản thân</span>
+            <span class="text2">Thời trang và lối sống vẫn luôn song hành, quần áo không chỉ để mặc mà còn để phản chiếu tâm hồn, lối sống không chỉ là lựa chọn nhất thời mà là tinh túy của mỗi con người sau từng ấy năm trải nghiệm...</span>
             <div class="readmore">
-              <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02JrrQmT6i68XZtjRE7zuWxdeftFF8cfy14sz2QbvV8q8KTUTeE8q4X1SsZrRGQL5vl" class="text3">Read More</a>
+              <a href="https://www.facebook.com/photo/?fbid=152048607756593&set=a.109001262061328" class="text3">Read More</a>
             </div>
           </div>
         </div>
