--- a/styles/bannerHomePage.module.css
+++ b/styles/bannerHomePage.module.css
@@ -2,10 +2,11 @@
     background-color: #365949;
     border: 2px solid #365949;
     color: white;
+    transition: all .2s;
 }
 
 
-.div__btn_banner:hover .btn__banner {
+.btn__banner:hover {
     background-color: white;
     border: 2px solid #365949;
     color: #365949;
