--- a/styles/home.css
+++ b/styles/home.css
@@ -1,84 +1,88 @@
 .slogan-area {
-	display: flex;
-	margin-top: 2px;
-	color: #283746;
-	font-family: 'Inter', sans-serif;
+  display: flex;
+  margin-top: 2px;
+  color: #283746;
+  font-family: 'Inter', sans-serif;
 }
 
 .image {
-	width: 70%;
-	justify-content: center;
-	align-items: center;
-	animation: pageLoading 2s;
-	margin-right: auto;
-	margin-left: auto;
-	padding-left: 100px;
+  width: 70%;
+  justify-content: center;
+  align-items: center;
+  animation: pageLoading 2s;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 100px;
 }
 
 .content {
-	text-align: center;
-	margin: auto;
-	animation: pageLoading 2s;
-	width: 100%;
-	padding-right: 150px;
+  text-align: center;
+  margin: auto;
+  animation: pageLoading 2s;
+  width: 100%;
+  padding-right: 150px;
 }
 
 .heading1 {
-	font-size: 5.5rem;
+  font-size: 5.5rem;
 }
 
 .heading2 {
-	font-size: 2.5rem;
+  font-size: 2.5rem;
 }
 
 .heading3 {
-	font-size: 1rem;
+  font-size: 1rem;
 }
 
 
 @media (max-width: 1024px) {
-	.slogan-area {
-		display: grid;
-	}
+  .slogan-area {
+    display: grid;
+  }
+
   .image {
     width: 60%;
   }
+
   .heading1 {
     font-size: 5rem;
     margin-top: 0;
   }
+
   .heading2 {
     font-size: 2.5rem;
   }
+
   .heading3 {
     font-size: 1.5rem;
   }
-	.image {
-		padding-left: 0;
-	}
 
-	.content{
-		padding-right: 0;
-	}
+  .image {
+    padding-left: 0;
+  }
+
+  .content {
+    padding-right: 0;
+  }
 }
 
-@media (max-width: 768px) {
-  
-}
+@media (max-width: 768px) {}
 
 @media (max-width: 640px) {
 
-  .image{
+  .image {
     width: 50%;
   }
 
   .heading1 {
     font-size: 3rem;
   }
-  
+
   .heading2 {
     font-size: 1.5rem;
   }
+
   .heading3 {
     font-size: 0.8rem;
   }
