Update sponsor and back card

--- a/project/templates/sponsor.html
+++ b/project/templates/sponsor.html
@@ -14,14 +14,8 @@
     <div class="sponsors-showcase sponsor_loading" id="sponsor-loading">
       <h2 class="h2ofsponsor">Một số đối tác nổi bật </h2>
         <div class="sponsors">
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor1-logo.png') }}" alt="Sponsor 1 Logo"></a>
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor2-logo.png') }}" alt="Sponsor 2 Logo"></a>
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor3-logo.png') }}" alt="Sponsor 3 Logo"></a>
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor4-logo.png') }}" alt="Sponsor 4 Logo"></a>
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor5-logo.png') }}" alt="Sponsor 5 Logo"></a>
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor6-logo.png') }}" alt="Sponsor 6 Logo"></a>
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor7-logo.png') }}" alt="Sponsor 7 Logo"></a>
-          <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor8-logo.png') }}" alt="Sponsor 8 Logo"></a>
+          <a href="https://www.vietstraw.com/" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor1-logo.png') }}" alt="Sponsor 1 Logo"></a>
+          <a href="https://www.facebook.com/myfashionvietnam" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor2-logo.png') }}" alt="Sponsor 2 Logo"></a>
         </div>
       </div>
 
