--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -53,7 +53,7 @@
   position: absolute;
   width: 100%;
   height: 45px;
-  padding: 5px 15px;
+  padding: 0;
   right:0;
   top:0;
   border: 4px solid #365949;
@@ -61,10 +61,14 @@
 }
 
 .search_navbar:hover {
-  width: 220px;
+  width: 200px;
 }
 
 .search_navbar:hover .btn_navbar {
   background-color: #365949;
   color: white;
+}
+
+.search_navbar:hover .input_navbar {
+  padding: 5px 50px 5px 15px
 }
