New banner add and banner update

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -22,7 +22,7 @@
 
 
     <!-- include body.html here -->
-        {% include 'scrolling.html' %} {% include 'process.html' %}{% include 'unique_banner.html' %} {% include
+        {% include 'scrolling.html' %} {% include 'process.html' %}{% include 'unique_banner.html' %} {% include 'unique_banner_new.html' %} {% include
     'customer.html' %} {% include 'achievement.html' %}{% include 'sponsor.html' %} {% include'productfeature.html' %}
     {% include 'slideshow.html' %} {% include 'video.html' %}
     {% include 'map.html' %} {% include'scrolltotop.html' %}{% include 'footer1.html' %} {% include 'chatbot.html' %}
