Customer content update

--- a/project/templates/customer.html
+++ b/project/templates/customer.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="customer_style customer_loading" id="customer_style">
-        <h1 class="c_title"> Đội ngũ cố vấn - bảo trợ</h1>
+        <h1 class="c_title">Nhận xét về chúng tôi</h1>
         <div class="c_wrapper">
             <div class="c_box">
 
@@ -88,10 +88,10 @@
                 <div class="c_content">
                     <div class="c_info">
                         <div class="c_name">
-                            Mỵ Store
+                            Lê Khánh Linh
                         </div>
                         <div class="c_job">
-                            Đối tác Eco Smart Solutions
+                            Nhà thiết kế của Mỵ Store - Đối tác Eco Smart Solutions
                         </div>
                         <div class="c_rate">
                             <i class="fas fa-star"></i>
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                     <div class="c_image">
-                        <img src="{{ url_for('static', filename='img/customer/customer_2.png') }}" alt="">
+                        <img src="{{ url_for('static', filename='img/customer/customer_3.jpg') }}" alt="">
                     </div>
                 </div>
             </div>
