--- a/project/templates/activities/activities.html
+++ b/project/templates/activities/activities.html
@@ -31,6 +31,32 @@
       </div>
     <div class="activities-container">
       <div id="activities_news">
+        <div class="content_block ">
+          <div class="content2" style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
+            <div class="block_header">
+              <div class="text1">COCOON - DOANH NGHIỆP MỸ PHẨM VIỆT "TIÊN PHONG" TRONG PHONG TRÀO SỬ DỤNG SẢN PHẨM THUẦN CHAY</div>
+            </div>
+            <span class="text2"
+              >Cocoon Việt Nam là thương hiệu mỹ phẩm thuần chay nổi tiếng ra đời từ năm 2013. 
+              Để hiểu một cách đơn giản, mỹ phẩm thuần chay là những sáng tạo mỹ phẩm hoàn toàn không chứa bất kỳ thành phần nào có nguồn gốc từ động vật...
+            </span>
+            <div class="readmore">
+              <a
+                href="https://www.facebook.com/ecosmartsolutionssjc/posts/pfbid02vjRyzCzvEzaxTpCQdQvziXSHBJBSbkU4VPyhLQj3wGEpkEsQsbU1ukeUYx4NHu4Ll"
+                class="text3"
+              >
+                Read More</a
+              >
+            </div>
+          </div>
+          <div class="image2">
+            <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
+              src="{{ url_for('static', filename='img/activities_page/activities_page_20.jpg') }}"
+              class="img"
+              alt=""
+            />
+          </div>
+        </div>
 
         <div class="content_block ">
           <div class="image2" >
