--- a/project/static/css/product.css
+++ b/project/static/css/product.css
@@ -4,18 +4,9 @@
   box-sizing: border-box;
 }
 
-@media(max-width: 1000px) and (max-height: 1000px) {
-  #ecoteam {
-      margin: 0;
-      width: 100%;
-  }
-  .department {
-      justify-content: center;
-      justify-items: center;
-      background-color: #365949;
-  }
-  .card {
-      width: 75%;
+@media screen and (max-width: 990px) {
+ .popup .popup-top {
+    grid-template-columns: auto;
   }
 }
 
@@ -38,7 +29,7 @@
 .popup .img-container {
   width: 100%;
   height: auto;
-  margin: 0 auto 2em auto;
+  margin: 1em auto 2em auto;
 }
 .popup-product-price {
   text-transform: uppercase;
@@ -131,13 +122,11 @@
 }
 .goshop {
   text-align: center;
-  font-family: 'Inter', sans-serif;
   text-decoration-line: none;
   width: 100%;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
-  font-size: 18px;
-  color: white;
+  font-size: 18px; 
   padding: 2% 5% 2% 5%;
   transition: 0.2s;
   background-color: rgb(64, 109, 89);
@@ -151,9 +140,7 @@
 }
 .goshop i{
   font-size: 2rem;
-  text-align: center;
   color: white;
-  text-align: center;
 }
 @keyframes pageLoading {
   from {
