--- a/project/templates/activities/activities.html
+++ b/project/templates/activities/activities.html
@@ -28,33 +28,12 @@
         <div class="content_block ">
           <div class="content2" style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
             <div class="block_header">
-              <div class="text1">Eco Touch - A new journey of Viet Straw to go global</div>
+              <div class="text1"> ECO TOUCH - A NEW JOURNEY OF VIET STRAW TO GO GLOBAL
+              </div>
             </div>
             <span class="text2">Joining forces with EcoSmart Solutions, ECO Touch embarks on an exhilarating journey
               alongside VietStraw! As Vietnam's trailblazer in the green movement, VietStraw has introduced rice straws
               - an eco-friendly alternative that perfectly aligns with the commitment to sustainability.
-            </span>
-            <div class="readmore">
-              <a href="/activities/vietstraw/"
-                class="text3">
-                Read More</a>
-            </div>
-          </div>
-          <div class="image2">
-            <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-              src="{{ url_for('static', filename='img/activities_page/vietstraw.png') }}" class="img" alt="" />
-          </div>
-        </div>
-
-        <div class="content_block " style="display: none">
-          <div class="content2" style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
-            <div class="block_header">
-              <div class="text1">VIETSTRAW - ECO TOUCH</div>
-            </div>
-            <span class="text2">Cocoon Việt Nam là thương hiệu mỹ phẩm thuần chay nổi tiếng ra đời từ năm 2013.
-              Để hiểu một cách đơn giản, mỹ phẩm thuần chay là những sáng tạo mỹ phẩm hoàn toàn không chứa bất kỳ thành
-              phần nào
-              có nguồn gốc từ động vật...
             </span>
             <div class="readmore">
               <a href="/activities/vietstraw/" class="text3">
@@ -63,7 +42,7 @@
           </div>
           <div class="image2">
             <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-              src="{{ url_for('static', filename='img/activities_page/activities_page_20.jpg') }}" class="img" alt="" />
+              src="{{ url_for('static', filename='img/activities_page/vietstraw.png') }}" class="img" alt="" />
           </div>
         </div>
 
